Add redirect to david.coffee

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,5 +21,6 @@
     ga('create', 'UA-31118328-10', 'auto');
     ga('send', 'pageview');
 
+    window.location.hostname = 'david.coffee';
   </script>
 </head>
